@@ -27,13 +27,14 @@
 
 ## Execute the tests
 
-* `mvn -Parquillian-jbossas-managed-7 test` will execute the tests within JBoss in a managed way
-* `mvn -Parquillian-jbossas-remote-7 test` will execute the tests with JBoss up and running and with the application deployed
+* `mvn -Parquillian-wildfly-managed test` will execute the tests within WildFly in a managed way
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 * If you have the following error, it's because you are not using a Maven profile `DeploymentScenario contains a target (_DEFAULT_) not matching any defined Container in the registry`
 
-## Deploy the application on JBoss application server
+## Deploy the application on WildFly application server
 
-* Start JBoss (`JBOSS_HOME/bin/standalone.sh`)
+* Start WildFly (`WILDFLY_HOME/bin/standalone.sh`)
+* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
 * Deploy the `cdbookstore/target/cdbookstore.war` file
 
 ## Check the web application
